...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryVariant">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBackdropPath"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    app:imageBackDrop="@{detail.backDropPath}" />

                <androidx.appcompat.widget.AppCompatTextView
...
                    android:text="@{detail.tagLine}"
                    app:visibleGone="@{detail.showTagline}"
                    tools:text="This world deserves a better class of criminals." />

                <!-- android:text="@{detail.releaseDate}" -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReleaseDate"
                    style="@style/RegularTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="5dp"

                    tools:text="1990-12-12" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRuntime"
                    style="@style/RegularTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="5dp"
                    android:text="@{detail.runtime}"
                    tools:text="100 mins" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvGenres"
                    style="@style/RegularTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{detail.genres}"
                    tools:text="Action, Adventure" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvSynopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    app:cardBackgroundColor="?colorPrimary"
                    app:cardElevation="@dimen/dp_3"
                    app:visibleGone="@{!TextUtils.isEmpty(detail.overview)}">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lblSynposis"
                            style="@style/BoldTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/lbl_synopsis"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvSynposis"
                            style="@style/Description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_10"
                            android:text="@{detail.overview}"
                            app:layout_constraintBottom_toBottomOf="parent"
...
                            app:layout_constraintTop_toBottomOf="@id/lblSynposis"
                            tools:text="Synopsis" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvCast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:visibility="gone"
                    app:cardBackgroundColor="?colorPrimary"
                    app:cardElevation="@dimen/dp_3"
...
                            android:layout_marginTop="10dp"
                            android:text="@string/cast"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvCast"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/lblCast" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvSimilarMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:visibility="gone"
                    app:cardBackgroundColor="?colorPrimary"
                    app:cardElevation="@dimen/dp_3"
...
                            android:layout_marginTop="10dp"
                            android:text="@string/similar_movies"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvSimilarMovies"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
...
